[project]
name = "dymo-bluetooth"
version = "0.0.1"
authors = [{ name = "ysfchn" }]
license.file = "LICENSE"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Printing",
    "Private :: Do Not Upload"
]
dependencies = [
    "bleak~=0.22.2",
    "pillow~=11.0.0"
]
optional-dependencies.full = ["python-barcode[images]~=0.15.1"]
requires-python = ">=3.10"

[project.urls]
"GitHub" = "https://github.com/ysfchn/dymo-bluetooth"

[project.scripts]
dymo_bluetooth = "dymo_bluetooth.__main__:main"

[tool.setuptools]
packages = ["dymo_bluetooth"]

[tool.rye]
dev-dependencies = [
    "ruff~=0.0.290"
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110

[tool.pyright]
venvPath = "."
venv = ".venv"
reportDeprecated = "none"
typeCheckingMode = "standard"
reportOptionalMemberAccess = "warning"
reportOptionalIterable = "none"
pythonPlatform = "All"
